<resources>
    <string name="app_name">DamLab3</string>

    <string name="AR_title">Agregar Recordatorio</string>
    <string name="AR_fecha_text">Fecha</string>
    <string name="AR_fecha_hint">DD/MM/AAAA</string>
    <string name="AR_hora_text">Hora</string>
    <string name="AR_hora_hint">HH:MM</string>
    <string name="AR_descripcion_text">Descripción</string>
    <string name="AR_descripcion_hint">Descripción del recordatorio</string>
    <string name="AR_id_hint">#1</string>
    <string name="channel_id">999</string>
    <string name="channel_name">CANAL1</string>
    <string name="channel_description">MI CANAL 1</string>

    <string name="MR_boton_agregar_recordatorio">Agregar Recordatorio</string>
    <string name="MR_toolbar_titulo">Recordatorios</string>

    <string name="pref_datasource_title">Tipo Datasource</string>
    <string name="pref_datasource_ok_button">Aceptar</string>
    <string name="pref_usuario_sysacad_title">Usuario Sysacad</string>
    <string name="pref_contrasena_sysacad_title">Contraseña Sysacad</string>
    <string name="pref_guardar_dialog_button">GUARDAR</string>

    <string name="C_aclaracion">Aclaración: Al modificar los datos de Sysacad se requiere un reinicio de la aplicación para funcionar correctamente.</string>
    <string name="C_boton_borrar_datos">BORRAR DATOS SYSACAD</string>

    <string-array name="pref_datasource_titles">
        <item>SHARED PREFERENCES</item>
        <item>ROOM DATABASE</item>
        <item>API RETROFIT</item>
    </string-array>

    <string-array name="pref_datasource_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>