<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:id="@+id/switch_preference"
        android:key="NOTIFICACIONES"
        android:title="Notificaciones"
        android:summary="Mostrar notificaciones"
        android:defaultValue="true"
        android:background="@color/AR_background_primary_color"/>
    <ListPreference
        android:id="@+id/datasource_preference"
        android:defaultValue="0"
        android:entries="@array/pref_datasource_titles"
        android:entryValues="@array/pref_datasource_values"
        android:key="datasource"
        android:title="@string/pref_datasource_title"
        android:positiveButtonText="@string/pref_datasource_ok_button"
        android:summary="%s"/>
    <EditTextPreference
        android:id="@+id/usuario_sysacad_preference"
        android:key="usuario_sysacad"
        android:title="@string/pref_usuario_sysacad_title"
        android:summary=""
        android:inputType="number"
        android:dialogTitle="@string/pref_usuario_sysacad_title"
        android:negativeButtonText=""
        android:positiveButtonText="@string/pref_guardar_dialog_button"/>
    <EditTextPreference
        android:id="@+id/contrasena_sysacad_preference"
        android:key="contrasena_sysacad"
        android:title="@string/pref_contrasena_sysacad_title"
        android:summary=""
        android:inputType="textPassword"
        android:dialogTitle="@string/pref_contrasena_sysacad_title"
        android:negativeButtonText=""
        android:positiveButtonText="@string/pref_guardar_dialog_button" />


</PreferenceScreen>