<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarRecordatorioActivity"
    android:background="@color/AR_background_primary_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AR_title"
            android:textAlignment="center"
            android:textSize="@dimen/AR_title_textsize"
            android:textColor="@color/AR_text_title_color"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:background="@color/AR_background_title_color"
            android:drawableEnd="@drawable/icon_notificacion"
            android:paddingHorizontal="@dimen/AR_title_paddingH"
            android:paddingVertical="@dimen/AR_title_paddingV"
            android:drawableTint="@color/AR_text_title_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AR_fecha_text"
                android:textAllCaps="true"
                android:textSize="@dimen/AR_text_view_textsize"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_marginHorizontal="@dimen/AR_text_view_margin"
                android:textColor="@color/AR_text_labels_color"/>

            <EditText
                android:id="@+id/AR_fecha_recordatorio_ET"
                android:hint="@string/AR_fecha_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/AR_edit_text_marginend"
                android:textSize="@dimen/AR_edit_text_textsize"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AR_hora_text"
                android:textAllCaps="true"
                android:textSize="@dimen/AR_text_view_textsize"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_marginHorizontal="@dimen/AR_text_view_margin"
                android:textColor="@color/AR_text_labels_color"/>

            <EditText
                android:id="@+id/AR_hora_recordatorio_ET"
                android:hint="@string/AR_hora_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/AR_edit_text_marginend"
                android:textSize="@dimen/AR_edit_text_textsize"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AR_descripcion_text"
                android:textAllCaps="true"
                android:textSize="@dimen/AR_text_view_textsize"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_marginHorizontal="@dimen/AR_text_view_margin"
                android:textColor="@color/AR_text_labels_color"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/AR_descripcion_recordatorio_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AR_descripcion_hint"
                android:layout_weight="1"
                android:maxLines="5"
                android:layout_marginEnd="@dimen/AR_edit_text_marginend"
                android:textSize="@dimen/AR_edit_text_textsize"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AR_agregar_recordatorio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/AR_floating_button_margin"
        android:contentDescription="@string/AR_title"
        android:src="@drawable/icon_agregar"/>

</android.support.design.widget.CoordinatorLayout>